--- a/personal-site/src/app/app.component.scss
+++ b/personal-site/src/app/app.component.scss
@@ -16,39 +16,33 @@
         padding: 0 0.25em;
     }
 
-    &-body-description {
+    &-body {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        font-family: "Lato", sans-serif;
-        font-size: 4em;
-    }
 
-    &-body-buttons {
-        position: absolute;
-        top: 62%;
-        left: 50%;
-        transform: translateY(-62%);
-        transform: translateX(-50%);
-        transition: all 1.5s ease;
-
-        a:link,
-        :visited {
-            color: #000000;
-            text-decoration: none;
+        &-description {
+            font-family: "Lato", sans-serif;
+            font-size: 4em;
         }
 
-        a:hover {
-            display: inline-block;
-            transform: translateY(-5px);
-        }
-
-        i {
-            margin: 0 0.5em;
-        }
-
-        .icon-size {
-            font-size: 2.5em;
+        &-buttons {
+            padding-top: 1em;
+            text-align: center;
+    
+            a:link,
+            :visited {
+                color: #000000;
+                text-decoration: none;
+            }
+    
+            i {
+                margin: 0 0.5em;
+            }
+    
+            .icon-size {
+                font-size: 2.5em;
+            }
         }
     }
 }
