- New prod build.

--- a/personal-site/src/app/app.component.html
+++ b/personal-site/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container" [ngClass]="{'animation-fade-in': pageLoaded}">
+<div class="container">
     <h3 class="container-name">Dusten Peterson</h3>
   <div class="container-body">
     <h1 class="container-body-description">Software Developer & Freelancer</h1>
